--- a/Backend_2/requirements.txt
+++ b/Backend_2/requirements.txt
@@ -1,21 +1,17 @@
-# Core Application
+# Core Flask
 flask==2.3.2
 flask-cors==4.0.0
-gunicorn==20.1.0
 
 # Data Processing
 pandas==2.0.3
 numpy==1.24.3
 
-# Machine Learning
-scikit-learn==1.3.0
+# ML Model Loading
 mlflow==2.6.0
+scikit-learn==1.3.0  # Required for sklearn model loading
+
+# DagsHub Integration
 dagshub==0.3.11
 
-# Production Dependencies
-python-dotenv==1.0.0
-waitress==2.1.2  # Alternative to gunicorn for Windows
-
-# Optional (only include if needed)
-# shap==0.42.1  # Uncomment if using SHAP explanations
-# xgboost==1.7.6  # Uncomment if using XGBoost models
+# Production Server (optional)
+gunicorn==20.1.0
