--- a/Backend_1/Dockerfile.backend1
+++ b/Backend_1/Dockerfile.backend1
@@ -1,17 +1,17 @@
 # Backend 1 Dockerfile
-FROM python:3.9-slim
+FROM python:3.11
 
 # Set the working directory
 WORKDIR /app
 
-# Copy the requirements file
-COPY requirements.txt .
-
-# Install the dependencies
-RUN pip install --no-cache-dir -r requirements.txt
-
 # Copy the rest of the application code
 COPY . .
+
+# Install the dependencies
+RUN pip install -r requirements.txt
+
+EXPOSE 5001
+
 
 # Command to run the application
 CMD ["python", "data_processing.py"]
