--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -5,6 +5,9 @@ on:
     branches: [main]
   workflow_dispatch:
 
+env:
+  LOWER_OWNER: "github.repository_owner"
+
 jobs:
   build-and-push:
     runs-on: ubuntu-latest
@@ -16,7 +19,12 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Login to GHCR (Lowercase Enforcement)
+      - name: Convert to lowercase
+        id: lowercase
+        run: |
+          echo "LOWER_OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -30,8 +38,8 @@ jobs:
           file: ./Backend_1/Dockerfile.backend1
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | lower }}/backend1:latest
-            ghcr.io/${{ github.repository_owner | lower }}/backend1:${{ github.sha }}
+            ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest
+            ghcr.io/${{ env.LOWER_OWNER }}/backend1:${{ github.sha }}
 
       - name: Build and push Backend 2
         uses: docker/build-push-action@v5
@@ -40,8 +48,8 @@ jobs:
           file: ./Backend_2/Dockerfile.backend2
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | lower }}/backend2:latest
-            ghcr.io/${{ github.repository_owner | lower }}/backend2:${{ github.sha }}
+            ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest
+            ghcr.io/${{ env.LOWER_OWNER }}/backend2:${{ github.sha }}
 
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
@@ -50,8 +58,8 @@ jobs:
           file: ./frontend/Dockerfile.frontend
           push: true
           tags: |
-            ghcr.io/${{ github.repository_owner | lower }}/frontend:latest
-            ghcr.io/${{ github.repository_owner | lower }}/frontend:${{ github.sha }}
+            ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest
+            ghcr.io/${{ env.LOWER_OWNER }}/frontend:${{ github.sha }}
 
   deploy-to-koyeb:
     needs: build-and-push
@@ -62,27 +70,14 @@ jobs:
         with:
           koyeb_token: ${{ secrets.KOYEB_TOKEN }}
           service_name: aide-project
-          ####################################
-          # Key Changes: Lowercase image references
-          ####################################
           docker: |
-            ghcr.io/${{ github.repository_owner | lower }}/backend1:latest
-            ghcr.io/${{ github.repository_owner | lower }}/backend2:latest
-            ghcr.io/${{ github.repository_owner | lower }}/frontend:latest
-          ####################################
-          # Koyeb Config (Optimized for Free Tier)
-          ####################################
-          app_name: aide-project
-          ports: "3000 5001 5002:http"  # Maps all ports to HTTP
-          regions: "fra"  # Frankfurt (free tier region)
+            ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest
+            ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest
+            ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest
+          ports: "3000:http,5001:http,5002:http"
+          regions: "fra"
           env: |
             NODE_ENV=production
             FLASK_ENV=production
             REACT_APP_BACKEND1_URL=https://backend1
             REACT_APP_BACKEND2_URL=https://backend2
-          ####################################
-          # Advanced (Optional)
-          ####################################
-          # 1. Enable auto-scale to zero to save resources
-          # 2. Add health checks in production
-          scalings: "auto:0-1"  # 0 when idle, 1 when active (free tier)
