--- a/Backend_2/requirements.txt
+++ b/Backend_2/requirements.txt
@@ -1,17 +1,20 @@
 # Core Flask
 flask==2.3.2
 flask-cors==4.0.0
+gunicorn==20.1.0  # Production server
 
 # Data Processing
 pandas==2.0.3
 numpy==1.24.3
 
-# ML Model Loading
+# ML & Model Tracking
+scikit-learn==1.3.0
 mlflow==2.6.0
-scikit-learn==1.3.0  # Required for sklearn model loading
+dagshub==0.3.11  # Contains the fixed auth module
 
-# DagsHub Integration
-dagshub==0.3.11
+# Dependencies for DagsHub auth
+python-dotenv==1.0.0  # For .env file loading
+requests==2.31.0  # Required by DagsHub SDK
 
-# Production Server (optional)
-gunicorn==20.1.0
+# Optional (for DagsHub MLflow integration)
+cloudpickle  # Required for model serialization
