--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  LOWER_OWNER: "mohammedbilal-0001"  # Hardcoded lowercase to avoid pipe issues
+  LOWER_OWNER: "mohammedbilal-0001"
 
 jobs:
   build-and-push:
@@ -64,9 +64,10 @@ jobs:
     steps:
       - name: Install Koyeb CLI
         run: |
-          curl -s https://cli.koyeb.com/install | sh
+          mkdir -p $HOME/.koyeb/bin
+          curl -sL https://github.com/koyeb/koyeb-cli/releases/latest/download/koyeb-cli_$(uname -s)_$(uname -m).tar.gz | tar xz -C $HOME/.koyeb/bin
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
-          
+
       - name: Deploy to Koyeb
         run: |
           koyeb service create aide-project \
