--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 env:
-  LOWER_OWNER: "mohammedbilal-0001"
+  LOWER_OWNER: "mohammedbilal-0001"  # Hardcoded lowercase to avoid pipe issues
 
 jobs:
   build-and-push:
@@ -35,7 +35,6 @@ jobs:
           tags: |
             ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest
             ghcr.io/${{ env.LOWER_OWNER }}/backend1:${{ github.sha }}
-
       - name: Build and push Backend 2 (with DagsHub auth)
         uses: docker/build-push-action@v5
         with:
@@ -47,7 +46,6 @@ jobs:
           tags: |
             ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest
             ghcr.io/${{ env.LOWER_OWNER }}/backend2:${{ github.sha }}
-
       - name: Build and push Frontend
         uses: docker/build-push-action@v5
         with:
@@ -57,17 +55,15 @@ jobs:
           tags: |
             ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest
             ghcr.io/${{ env.LOWER_OWNER }}/frontend:${{ github.sha }}
-
   deploy-to-koyeb:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
       - name: Install Koyeb CLI
         run: |
-          mkdir -p $HOME/.koyeb/bin
-          curl -sL https://github.com/koyeb/koyeb-cli/releases/latest/download/koyeb-cli_$(uname -s)_$(uname -m).tar.gz | tar xz -C $HOME/.koyeb/bin
+          curl -s https://cli.koyeb.com/install | sh
           echo "$HOME/.koyeb/bin" >> $GITHUB_PATH
-
+          
       - name: Deploy to Koyeb
         run: |
           koyeb service create aide-project \
