--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -59,11 +59,11 @@ jobs:
     needs: build-and-push
     runs-on: ubuntu-latest
     steps:
-      - name: Install and configure the Koyeb CLI
+      - name: Install Koyeb CLI
         uses: koyeb-community/koyeb-actions@v2
         with:
           api_token: ${{ secrets.KOYEB_TOKEN }}
-            
+  
       - name: Deploy to Koyeb
         run: |
           koyeb service create aide-project \
