--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -63,7 +63,14 @@ jobs:
         uses: koyeb-community/koyeb-actions@v2
         with:
           api_token: ${{ secrets.KOYEB_TOKEN }}
-            
+          
+      - name: Check image existence
+        run: |
+          # Debugging step to verify image accessibility
+          docker pull ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest
+          docker pull ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest
+          docker pull ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest 
+          
       - name: Deploy to Koyeb
         run: |
           koyeb service create aide-project \
