--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -85,6 +85,7 @@ jobs:
             --env "REACT_APP_BACKEND1_URL=/backend1" \
             --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
-            --max-scale 1
+            --max-scale 1 \
+            --token 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
         env:
           LOWER_OWNER: mohammedbilal-0001
