--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -38,14 +38,12 @@ jobs:
           koyeb service create aide-project \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest \
-            --docker ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest \
-            --ports "3000:http,5001:http,5002:http" \
-            --routes "/frontend:3000,/backend1:5001,/backend2:5002" \
+            --ports "3000:http,5001:http \
+            --routes "/frontend:3000,/backend1:5001\
             --regions fra \
             --env "NODE_ENV=production" \
             --env "FLASK_ENV=production" \
             --env "REACT_APP_BACKEND1_URL=/backend1" \
-            --env "REACT_APP_BACKEND2_URL=/backend2" \
             --min-scale 0 \
             --max-scale 1 
         env:
