--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Verify image accessibility
         run: |
-          for image in frontend backend1 backend2; do
+          for image in frontend backend1; do
             echo "Verifying ghcr.io/${{ env.LOWER_OWNER }}/$image:latest..."
             docker pull ghcr.io/${{ env.LOWER_OWNER }}/$image:latest || exit 1
           done
@@ -38,13 +38,13 @@ jobs:
           koyeb service create aide-project \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest \
             --docker ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest \
-            --ports "3000:http,5001:http \
-            --routes "/frontend:3000,/backend1:5001\
+            --ports "3000:http,5001:http" \
+            --routes "/frontend:3000,/backend1:5001" \
             --regions fra \
             --env "NODE_ENV=production" \
             --env "FLASK_ENV=production" \
             --env "REACT_APP_BACKEND1_URL=/backend1" \
             --min-scale 0 \
-            --max-scale 1 
+            --max-scale 1
         env:
           LOWER_OWNER: mohammedbilal-0001
