--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -28,22 +28,47 @@ jobs:
         with:
           api_token: ${{ secrets.KOYEB_TOKEN }}
 
-      - name: Deploy to Koyeb
+      
+      - name: Deploy backend1 to Koyeb
         run: |
-          koyeb service create aide-project \
-            --docker ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest \
-            --docker ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest \
-            --docker ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest \
-            --ports "3000:http,5001:http,5002:http" \
-            --routes "/frontend:3000,/backend1:5001,/backend2:5002" \
-            --regions fra \
-            --env "NODE_ENV=production" \
-            --env "FLASK_ENV=production" \
-            --env "REACT_APP_BACKEND1_URL=/backend1" \
-            --env "REACT_APP_BACKEND2_URL=/backend2" \
-            --min-scale 0 \
-            --max-scale 1 \
-            --token "${{ env.GHCR_TOKEN }}"  # Properly quoted token
+          koyeb service create aide-project-backend1 \
+          --docker ghcr.io/mohammedbilal-0001/backend1:latest \
+          --ports 5001:http \
+          --routes "/backend1:5001" \
+          --regions fra \
+          --env "FLASK_ENV=production" \
+          --min-scale 0 \
+          --max-scale 1 \
+          --token "${{ env.GHCR_TOKEN }}"
+        
+        # Deploy frontend
+      - name: Deploy frontend to Koyeb
+        run: |
+          koyeb service create aide-project-frontend \
+          --docker ghcr.io/mohammedbilal-0001/frontend:latest \
+          --ports 3000:http \
+          --routes "/frontend:3000" \
+          --regions fra \
+          --env "NODE_ENV=production" \
+          --env "REACT_APP_BACKEND1_URL=/backend1" \
+          --env "REACT_APP_BACKEND2_URL=/backend2" \
+          --min-scale 0 \
+          --max-scale 1 \
+          --token "${{ env.GHCR_TOKEN }}"
+        
+        # Deploy backend2
+      - name: Deploy backend2 to Koyeb
+        run: |
+          koyeb service create aide-project-backend2 \
+          --docker ghcr.io/mohammedbilal-0001/backend2:latest \
+          --ports 5002:http \
+          --routes "/backend2:5002" \
+          --regions fra \
+          --env "FLASK_ENV=production" \
+          --min-scale 0 \
+          --max-scale 1 \
+          --token "${{ env.GHCR_TOKEN }}"
+              
     env:
       LOWER_OWNER: mohammedbilal-0001
       GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
