--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -1,4 +1,4 @@
-name: Deploy to Koyeb
+name: Deploy to Koyeb (API Direct Approach)
 on:
   push:
     branches: [deploy]
@@ -20,47 +20,70 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ env.GHCR_TOKEN }}
       
-      - name: Install Koyeb CLI
-        uses: koyeb-community/koyeb-actions@v2
-        with:
-          api_token: ${{ secrets.KOYEB_TOKEN }}
-      
-      - name: Deploy backend1 to Koyeb
+      # Approach 2: Use Koyeb API directly with curl
+      - name: Deploy backend1 via Koyeb API
         run: |
-          koyeb service create aide-project-backend1 \
-            --docker ghcr.io/mohammedbilal-0001/backend1:latest \
-            --ports 5001:http \
-            --routes "/backend1:5001" \
-            --regions fra \
-            --env "FLASK_ENV=production" \
-            --min-scale 0 \
-            --max-scale 1
+          echo "Deploying backend1 via direct API call..."
+          curl -X POST "https://app.koyeb.com/v1/services" \
+            -H "Authorization: Bearer ${{ secrets.KOYEB_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "name": "aide-project-backend1",
+              "definition": {
+                "type": "web",
+                "docker": {
+                  "image": "ghcr.io/mohammedbilal-0001/backend1:latest"
+                },
+                "ports": [{"port": 5001, "protocol": "http"}],
+                "routes": [{"path": "/backend1", "port": 5001}],
+                "regions": ["fra"],
+                "env": [{"key": "FLASK_ENV", "value": "production"}],
+                "scaling": {"min": 0, "max": 1}
+              }
+            }'
       
-      - name: Deploy frontend to Koyeb
+      - name: Deploy frontend via Koyeb API
         run: |
-          koyeb service create aide-project-frontend \
-            --docker ghcr.io/mohammedbilal-0001/frontend:latest \
-            --ports 3000:http \
-            --routes "/frontend:3000" \
-            --regions fra \
-            --env "NODE_ENV=production" \
-            --env "REACT_APP_BACKEND1_URL=/backend1" \
-            --env "REACT_APP_BACKEND2_URL=/backend2" \
-            --min-scale 0 \
-            --max-scale 1
+          echo "Deploying frontend via direct API call..."
+          curl -X POST "https://app.koyeb.com/v1/services" \
+            -H "Authorization: Bearer ${{ secrets.KOYEB_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "name": "aide-project-frontend",
+              "definition": {
+                "type": "web",
+                "docker": {
+                  "image": "ghcr.io/mohammedbilal-0001/frontend:latest"
+                },
+                "ports": [{"port": 3000, "protocol": "http"}],
+                "routes": [{"path": "/frontend", "port": 3000}],
+                "regions": ["fra"],
+                "env": [
+                  {"key": "NODE_ENV", "value": "production"},
+                  {"key": "REACT_APP_BACKEND1_URL", "value": "/backend1"},
+                  {"key": "REACT_APP_BACKEND2_URL", "value": "/backend2"}
+                ],
+                "scaling": {"min": 0, "max": 1}
+              }
+            }'
       
-      - name: Deploy backend2 to Koyeb
+      - name: Deploy backend2 via Koyeb API
         run: |
-          koyeb service create aide-project-backend2 \
-            --docker ghcr.io/mohammedbilal-0001/backend2:latest \
-            --ports 5002:http \
-            --routes "/backend2:5002" \
-            --regions fra \
-            --env "FLASK_ENV=production" \
-            --min-scale 0 \
-            --max-scale 1
-      
-      - name: Check deployment status
-        run: |
-          echo "Checking deployment status..."
-          koyeb service list
+          echo "Deploying backend2 via direct API call..."
+          curl -X POST "https://app.koyeb.com/v1/services" \
+            -H "Authorization: Bearer ${{ secrets.KOYEB_TOKEN }}" \
+            -H "Content-Type: application/json" \
+            -d '{
+              "name": "aide-project-backend2",
+              "definition": {
+                "type": "web",
+                "docker": {
+                  "image": "ghcr.io/mohammedbilal-0001/backend2:latest"
+                },
+                "ports": [{"port": 5002, "protocol": "http"}],
+                "routes": [{"path": "/backend2", "port": 5002}],
+                "regions": ["fra"],
+                "env": [{"key": "FLASK_ENV", "value": "production"}],
+                "scaling": {"min": 0, "max": 1}
+              }
+            }'
