--- a/.github/workflows/deploy-to-koyeb.yml
+++ b/.github/workflows/deploy-to-koyeb.yml
@@ -1,89 +1,49 @@
-name: Deploy to Koyeb (API Direct Approach)
+name: Deploy to Koyeb
+
 on:
   push:
     branches: [deploy]
   workflow_dispatch:
+
 env:
   LOWER_OWNER: mohammedbilal-0001
-  GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+  GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}  # Added here
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-      
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          password: ${{ env.GHCR_TOKEN }}
-      
-      # Approach 2: Use Koyeb API directly with curl
-      - name: Deploy backend1 via Koyeb API
+          password: ${{ env.GHCR_TOKEN }}  # Changed to use the env variable
+
+      - name: Install Koyeb CLI
+        uses: koyeb-community/koyeb-actions@v2
+        with:
+          api_token: ${{ secrets.KOYEB_TOKEN }}
+
+      - name: Deploy to Koyeb
         run: |
-          echo "Deploying backend1 via direct API call..."
-          curl -X POST "https://app.koyeb.com/v1/services" \
-            -H "Authorization: Bearer ${{ secrets.KOYEB_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "name": "aide-project-backend1",
-              "definition": {
-                "type": "web",
-                "docker": {
-                  "image": "ghcr.io/mohammedbilal-0001/backend1:latest"
-                },
-                "ports": [{"port": 5001, "protocol": "http"}],
-                "routes": [{"path": "/backend1", "port": 5001}],
-                "regions": ["fra"],
-                "env": [{"key": "FLASK_ENV", "value": "production"}],
-                "scaling": {"min": 0, "max": 1}
-              }
-            }'
-      
-      - name: Deploy frontend via Koyeb API
-        run: |
-          echo "Deploying frontend via direct API call..."
-          curl -X POST "https://app.koyeb.com/v1/services" \
-            -H "Authorization: Bearer ${{ secrets.KOYEB_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "name": "aide-project-frontend",
-              "definition": {
-                "type": "web",
-                "docker": {
-                  "image": "ghcr.io/mohammedbilal-0001/frontend:latest"
-                },
-                "ports": [{"port": 3000, "protocol": "http"}],
-                "routes": [{"path": "/frontend", "port": 3000}],
-                "regions": ["fra"],
-                "env": [
-                  {"key": "NODE_ENV", "value": "production"},
-                  {"key": "REACT_APP_BACKEND1_URL", "value": "/backend1"},
-                  {"key": "REACT_APP_BACKEND2_URL", "value": "/backend2"}
-                ],
-                "scaling": {"min": 0, "max": 1}
-              }
-            }'
-      
-      - name: Deploy backend2 via Koyeb API
-        run: |
-          echo "Deploying backend2 via direct API call..."
-          curl -X POST "https://app.koyeb.com/v1/services" \
-            -H "Authorization: Bearer ${{ secrets.KOYEB_TOKEN }}" \
-            -H "Content-Type: application/json" \
-            -d '{
-              "name": "aide-project-backend2",
-              "definition": {
-                "type": "web",
-                "docker": {
-                  "image": "ghcr.io/mohammedbilal-0001/backend2:latest"
-                },
-                "ports": [{"port": 5002, "protocol": "http"}],
-                "routes": [{"path": "/backend2", "port": 5002}],
-                "regions": ["fra"],
-                "env": [{"key": "FLASK_ENV", "value": "production"}],
-                "scaling": {"min": 0, "max": 1}
-              }
-            }'
+          koyeb service create aide-project \
+            --docker ghcr.io/${{ env.LOWER_OWNER }}/backend1:latest \
+            --docker ghcr.io/${{ env.LOWER_OWNER }}/frontend:latest \
+            --docker ghcr.io/${{ env.LOWER_OWNER }}/backend2:latest \
+            --ports "3000:http,5001:http,5002:http" \
+            --routes "/frontend:3000,/backend1:5001,/backend2:5002" \
+            --regions fra \
+            --env "NODE_ENV=production" \
+            --env "FLASK_ENV=production" \
+            --env "REACT_APP_BACKEND1_URL=/backend1" \
+            --env "REACT_APP_BACKEND2_URL=/backend2" \
+            --min-scale 0 \
+            --max-scale 1 \
+            --token "${{ env.GHCR_TOKEN }}"  # Properly quoted token
+    env:
+      LOWER_OWNER: mohammedbilal-0001
+      GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
